Fix debugger quality-of-life regressions from bug 1412202
Categories
(Core :: JavaScript Engine, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | unaffected |
| firefox83 | --- | wontfix |
| firefox84 | --- | wontfix |
| firefox85 | --- | wontfix |
| firefox86 | --- | fixed |
People
(Reporter: jorendorff, Assigned: jorendorff)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
A patch in bug 1412202 disables six debugger tests that use frame.environment.getVariable and frame.this to examine suspended frames.
With the optimization, these tests fail because the engine returns {optimizedOut: true} where previously it would get the correct value.
I'm not sure how much it really matters; I don't know that the devtools debugger even offers a way to inspect a generator or async task's suspended frames. Anyway, it's fixable. The solution involves (at least) teaching DebugEnvironmentProxyHandler::handleUnaliasedAccess how to access suspended GeneratorObject state.
| Assignee | ||
Comment 1•5 years ago
|
||
I'm working on at least half of this—the getVariable half. While I'm in the code I'll check to see if the other half is also easy.
Comment 2•5 years ago
|
||
Comment 3•5 years ago
|
||
Set release status flags based on info from the regressing bug 1412202
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
| Assignee | ||
Comment 5•5 years ago
|
||
Depends on D94200
Comment 6•5 years ago
|
||
Hey Ted, when do you think you'll be able to review the patches on this bug? :)
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 7•5 years ago
|
||
There are some r+ patches which didn't land and no activity in this bug for 2 weeks.
:jorendorff, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Comment 9•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/7ddb0286dfe8
https://hg.mozilla.org/mozilla-central/rev/0f7b73eb3b5e
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Description
•