Bug 1671391 - Part 2: Fix frame.this access to optimized .this binding in generators and async functions. r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D94201