js/src/jit-test/tests/debug/Frame-this-15.js
@@ -18,7 +18,7 @@ var f = async function() {
 let frame;
 dbg.onEnterFrame = f => {
   frame = f;
-  //FIXME assertEq(frame.this, gDO.makeDebuggeeValue(g.context));
+  assertEq(frame.this, gDO.makeDebuggeeValue(g.context));
   dbg.onEnterFrame = undefined;
 };
 
@@ -26,7 +26,7 @@ dbg.onEnterFrame = f => {
   const promise = g.f();
 
   assertEq(!!frame, true);
-  //FIXME assertEq(frame.this, gDO.makeDebuggeeValue(g.context));
+  assertEq(frame.this, gDO.makeDebuggeeValue(g.context));
 
   await promise;
 
